# gredis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  hiredis.vapi  redistest.vala
src/: CMakeLists.txt  DatabaseOperation.vala  GRedis.vala  HashOperation.vala  ListOperation.vala  LogHandler.vala  Operation.vala  RedisMap.vala  SetOperation.vala  SingleOperation.vala  gredis-0.1.deps  gredis-0.1.pc.cmake
test/: CMakeLists.txt  asynctest.vala  cleanuptest.vala  databasetest.vala  hashtest.vala  listtest.vala  maintest.vala  redismaptest.vala  settest.vala  test-runner.vala
vapi/: hiredis.vapi
