include(ValaPrecompile)

vala_precompile(GREDIS_VALA_C 
	GRedis.vala
	Operation.vala
	SingleOperation.vala
	HashOperation.vala
PACKAGES
	${DEFAULT_PACKAGES}
	posix
	hiredis
OPTIONS
	${DEFAULT_VALA_OPTIONS}
GENERATE_VAPI
	${PKGNAME}-${PKGVERSION}
GENERATE_HEADER
	${PKGNAME}-${PKGVERSION})

set(GREDIS_CFLAGS
	${CORE_DEPS_CFLAGS}
	${CORE_DEPS_CFLAGS_OTHER}
	-w
)
set(GREDIS_LIB_PATHS
	${CORE_DEPS_LIBRARY_DIRS}
)
link_directories(${GREDIS_LIB_PATHS})
add_definitions(${GREDIS_CFLAGS})

add_library(${PKGNAME}-${PKGVERSION} SHARED ${GREDIS_VALA_C})
target_link_libraries(${PKGNAME}-${PKGVERSION} ${CORE_DEPS_LIBRARIES})
configure_file (${CMAKE_CURRENT_SOURCE_DIR}/${PKGNAME}-${PKGVERSION}.pc.cmake ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc)

install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.vapi ${PKGNAME}-${PKGVERSION}.deps
	../vapi/hiredis.vapi
	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/vala/vapi/)
install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.h
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/)
install (
	FILES ${CMAKE_CURRENT_BINARY_DIR}/${PKGNAME}-${PKGVERSION}.pc
	DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/pkgconfig/)
install (
	TARGETS ${PKGNAME}-${PKGVERSION}
	DESTINATION ${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}/)
